--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/styels.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Masterdots Game</title>
 </head>
 <body>
@@ -17,20 +20,25 @@
     <main>
         <form action="#">
             <div class="itemform">
-                <label for="nickname">Introduce tu Usuario: </label>
+                <label for="nickname">Usuario</label>
+                <input type="text" name="nickname" value="@" id="nick" readonly>
                 <input type="text" name="nickname" id="nickname" required>
+            </div>
+            <div class="itemform">
+                <label for="email">Correo Electrónico</label>
+                <input type="email" id="email" placeholder="nombre@email.com" required>
             </div>
             <div class="itemform">
                 <label for="size">Tamaño del Juego</label>
                 <select name="size" id="size">
-                    <option value="">Elige un Tamaño</option>
+                    <option value="">--Elige un Tamaño--</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
                 </select>
             </div>
             <div class="itemform">
-                <input type="submi" value="play">
+                <input type="submit" value="Jugar">
             </div>
         </form>
     </main>
