Create Cat Age Calculator

--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
     <footer>
         <p>Curso FrontEnd HTML, CSS y JS</p>
     </footer>
+    <!-- JS -->
+    <script src="./js/script.js"></script>
 </body>
 </html>
