--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="itemform">
                 <label for="size">Tamaño del Juego</label>
                 <select name="size" id="size">
-                    <option value="">--Elige un Tamaño--</option>
+                    <option value="0">--Elige un Tamaño--</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
@@ -47,6 +47,6 @@
         <p>Curso FrontEnd HTML, CSS y JS</p>
     </footer>
     <!-- JS -->
-    <script src="./js/script.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
