--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </select>
             </div>
             <div class="itemform">
-                <input type="submit" value="Jugar">
+                <input type="submit" value="Jugar" onclick="test()">
             </div>
         </form>
     </main>
