--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
     </header>
     <!-- Formulario Usuario -->
     <main>
-        <form action="#">
+        <div>
+            <p id="error"></p>
+        </div>
+        <form action="game.html" id="entryForm">
             <div class="itemform">
                 <label for="nickname">Usuario</label>
                 <input type="text" name="nickname" value="@" id="nick" readonly>
-                <input type="text" name="nickname" id="nickname" required>
+                <input type="text" name="nickname" id="nickname">
             </div>
             <div class="itemform">
                 <label for="email">Correo Electrónico</label>
-                <input type="email" id="email" placeholder="nombre@email.com" required>
+                <input type="email" id="email" placeholder="nombre@email.com">
             </div>
             <div class="itemform">
                 <label for="size">Tamaño del Juego</label>
@@ -38,7 +41,7 @@
                 </select>
             </div>
             <div class="itemform">
-                <input type="submit" value="Jugar" onclick="test()">
+                <input type="submit" value="Jugar" id="playButton">
             </div>
         </form>
     </main>
