--- a/index.html
+++ b/index.html
@@ -23,22 +23,25 @@
         </div>
         <form action="game.html" id="entryForm">
             <div class="itemform">
-                <label for="nickname">Usuario</label>
+                <label for="nickname">Usuario*</label>
                 <input type="text" name="nickname" value="@" id="nick" readonly>
-                <input type="text" name="nickname" id="nickname">
+                <input type="text" name="nickname" id="nickname" required minlength="2">
             </div>
             <div class="itemform">
                 <label for="email">Correo Electrónico</label>
                 <input type="email" id="email" placeholder="nombre@email.com">
             </div>
             <div class="itemform">
-                <label for="size">Tamaño del Juego</label>
-                <select name="size" id="size">
+                <label for="size">Tamaño del Juego*</label>
+                <select name="size" id="size" required>
                     <option value="0">--Elige un Tamaño--</option>
                     <option value="1">4x4</option>
                     <option value="2">5x5</option>
                     <option value="3">6x6</option>
                 </select>
+            </div>
+            <div class="itemform">
+                <p>* Obligatorio</p>
             </div>
             <div class="itemform">
                 <input type="submit" value="Jugar" id="playButton">
