--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <p>Curso FrontEnd HTML, CSS y JS</p>
     </footer>
     <!-- JS -->
+    <script src="./js/userData.js"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
